add images with same background

--- a/RESTURANT/BURGERS/burgers.html
+++ b/RESTURANT/BURGERS/burgers.html
@@ -23,22 +23,22 @@
     a satisfying experience that satisfies the soul and ignites a craving for more.</p>
 
 <ul>
-    <li><img src="../images/classchickenburger.webp" height="120" width="120" />
+    <li><img src="../images/classchickenburger-removebg-preview.png" height="120" width="120" />
         <br /><b>CLASSIC CHICKEN BURGER</b>
         <br />Serves 1 ---<i> Grilled chicken petty combined with lettuce,
         <BR /> mayo and cheese. Served with fries & coleslaw.</i>
         <br /><b>Rs.575</b></li>
-    <li><img src="../images/classicbeefburger.webp" height="120" width="120" />
+    <li><img src="../images/classicbeefburger-removebg-preview.png" height="120" width="120" />
         <br /><b>CLASSIC BEEF BURGER</b>
         <br />Serves 1 --- <i>Grilled beef petty combined with lettuce,
         <BR />mayo and cheese. Served with fries & coleslaw.</i>
         <br /><b>Rs.575</b></li>
-    <li><img src="../images/bbqchickenburger.webp" width="120" height="120" />
+    <li><img src="../images/bbqchickenburger-removebg-preview.png" width="120" height="120" />
         <br /><b>BBQ CHICKEN BURGER</b>
         <br />Serves 1 --- <i>Charcoal grilled cubes of chicken on bed of ice berg topped 
         <BR />with smokey bbq sauce. Served with fries & coleslaw.</i>
         <br /><b>Rs.595</b></li>    
-    <li><img src="../images/americangrilledburger.webp" height="120" width="120" />
+    <li><img src="../images/americangrilledburger-removebg-preview.png" height="120" width="120" />
         <br /><b>AMERICAN GRILLED BURGER</b>
         <br />Serves 1 --- <i>Grilled boneless chicken fillet topped with american sauce,
         <BR /> sauteed onions, sauteed mushrooms and cheese.
