--- a/RESTURANT/KARAHI/karahi.html
+++ b/RESTURANT/KARAHI/karahi.html
@@ -24,22 +24,22 @@
     leaves and served alongside naan or rice,making it a mouthwatering choice
     for enthusiasts of South Asian cuisine.</p>
 <ul>
-    <li><img src="../images/karahi-removebg-preview.png" height="120" width="120" />
+    <li><img src="../images/karahiicon.png" height="120" width="120" />
         <br /><b>CHICKEN KARAHI</b>
         <br />Serves 2 OR 3 --- <i> A gravy of delicious and spicy combination of tomatoes,
         <BR /> green chili, crush chili and black pepper full of flavor meat</i>
         <br /><b>Rs.1199</b></li>
-    <li><img src="../images/dealfour.webp" height="120" width="120" />
+    <li><img src="../images/dealfour-removebg-preview.png" height="120" width="120" />
         <br /><b>MUTTON PESHAWARI KARAHI</b>
         <br />Serves 2 OR 3 --- <i>A gravy of delicious and spicy combination of tomatoes,
         <br /> green chili, crush chili and black pepper full of flavor meat Mutton</i>
         <br /><b>Rs.1995</b></li>
-    <li><img src="../images/chickenbrownkarhi.webp" height="120" width="120" />
+    <li><img src="../images/chickenbrownkarhi-removebg-preview.png" height="120" width="120" />
         <br /><b>CHICKEN BROWN KARAHI</b>
         <br />Serves 2 OR 3 --- <i>Dry meat Chicken with flavors of chatpata masla,
         <BR /> green chili, crush chili, black pepper, and lemon juice.</i>
         <br /><b>Rs.1199</b></li>    
-    <li><img src="../images/muttonbutter.webp" height="120" width="120" />
+    <li><img src="../images/muttonbutter-removebg-preview.png" height="120" width="120" />
         <br /><b>MUTTON BUTTER KARAHI</b>
         <br />Serves 2 OR 3 --- <i>Meat Chicken cooked in butter along with tomatoes,
         <BR />green chili, crush chili and black pepper.</i>
