--- a/RESTURANT/ONLINE DEALS/onlinedeals.html
+++ b/RESTURANT/ONLINE DEALS/onlinedeals.html
@@ -13,24 +13,24 @@
     <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" class="homeicon" /></a>
     <h1>DEALS</h1> <h3 class="EXCLUSIVE">EXCLUSIVE DEALS UPTO 25% OFF</h3>    
 <ol>
-    <li><img src="../images/DEALONE.webp" height="120" width="120" />
+    <li><img src="../images/DEALONE-removebg-preview (2).png" height="120" width="120" />
       <br /> <strong>DEAL ONE (9%OFF)</strong><ul><li>
       <b>CHICKEN CHATNI ROLL & CHICKEN MAYO GARLIC ROLL</b>
       <br />Serves 1 OR 2 --- <i>CHICKEN CHATNI ROLL 
       <br />& CHICKEN MAYO GARLIC ROLL</i> <br />
       <s>Rs.540</s> <strong>Rs.490</strong></li></ul>
-    <li><img src="../images/dealtwo.webp" height="120" width="120" />
+    <li><img src="../images/dealtwo-removebg-preview.png" height="120" width="120" />
       <br /><strong>DEAL TWO (10%OFF)</strong><ul><li><b>CHICKEN CHATNI ROLL & CHICKEN TIKKA</b>
       <br />Serves 1 OR 2 --- <i>CHICKEN CHATNI ROLL 
       <br />& CHICKEN TIKKA</i> <br />
       <s>Rs.820</s> <strong>Rs.740</strong></li></ul>
-    <li><img src="../images/dealthree.webp" height="120" width="120" />
+    <li><img src="../images/dealthree-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL THREE (18%OFF)</strong><ul><li><b>CHICKEN HANDI & CHICKEN TIKKA</b>
         <br />Serves 3 OR 4 --- <i>CHICKEN HANDI 
         <br />& CHICKEN TIKKA</i> <br />
         <s>Rs.2250</s> <strong>Rs.1999</strong></li></ul>  
-    <li><img src="../images/dealfour.webp" height="120" width="120" /> 
-        <img src="../images/chickenbrownkarhi.webp" height="120" width="120" />
+    <li><img src="../images/dealfour-removebg-preview.png" height="120" width="120" /> 
+        <img src="../images/chickenbrownkarhi-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL FOUR (25%OFF)</strong><ul><li><b>MUTTON KARAHI & CHICKEN KARAHI</b>
         <br />Serves 4 OR 6 --- <i>MUTTON KARAHI 
         <br />& CHICKEN KARAHI</i> <br />            
