--- a/RESTURANT/STARTER/starter.html
+++ b/RESTURANT/STARTER/starter.html
@@ -15,27 +15,27 @@
     <p>Welcome to our restaurant! Start your culinary journey with our tantalizing starter menu.</p>
 <ul>
     <li><p>
-        <img src="../images/chickencornsoup.webp" height="120" width="120" />
+        <img src="../images/chickencornsoup-removebg-preview.png" height="120" width="120" />
         <br /><b>CHICKEN CORN SOUP (SINGLE)</b>
         <br />Serves 1 OR 2---<i>PURE CHICKEN STOCK 
         <br />WITH CHICKEN CHUNKS AND BITS OF CORN</i>
         <br /><b>Rs.420</b></li></p>
     <li><p>
-    <img src="../images/crunchyfingerfish.webp" height="120" width="120" />
+    <img src="../images/crunchyfingerfish-removebg-preview (1).png" height="120" width="120" />
         <br /><b>CRUNCHT FINGER FISH</b>
         <br />Serves 1 OR 2---<i>EXTRA CRISPY BONELESS FISH
         <BR /> STRIPS COATED AND DEEP FRIED TO PERFECTION 
         <BR />SERVED WITH TARTER SAUCE AND FRIES</i>
         <br /><b>Rs.995</b></li></p>
     <li><p>
-        <img src="../images/saucywings.webp" height="120" width="120" />
+        <img src="../images/saucywings1.jpg" height="120" width="120" />
         <br /><b>SAUCY WINGS</b>
         <br />Serves 1 OR 2--- <i>6 PCS OF MOUTH WATERING CRISPY,
         <BR /> FLAVORFUL CHICKEN WINGS
         <BR />SERVED WITH SAUCE AND FRIES</i>
         <br /><b>Rs.545</b></li></p> 
     <li><p>
-        <img src="../images/pizzafries.webp" width="120" height="120" />
+        <img src="../images/pizzafries1.jpg" width="120" height="120" />
         <br /><b>PIZZA FRIES (SMALL)</b>
         <br />Serves 1 --- <i>FRIES LOADED WITH PIZZA STYLE CHICKEN
         <BR /> CHEESE, MUSHROOMS & SPECIAL SAUCE</i>
