completed images background work

--- a/RESTURANT/Baverages/Baverages.html
+++ b/RESTURANT/Baverages/Baverages.html
@@ -13,31 +13,31 @@
     <a href="../index.html"><img src="../images/homeicon.png" width="50" height="55" class="homeicon" /> </a>
     <h1>BEVERAGES</h1>
 <ul>
-    <li><img  src="../images/mineralwaterlarge.webp" width="80" height="80" /> 
+    <li><img  src="../images/mineralwaterlarge-removebg-preview.png" width="80" height="80" /> 
         <br /><b>MINERAL WATER (LARGE)</b>
         <br /><i>Aquafina 1500ml mineral water bottle</i>
         <br /><b>Rs.160</b></li>
-    <li><img src="../images/mineralwatersmall.webp" width="80" height="60" />
+    <li><img src="../images/mineralwatersmall-removebg-preview.png" width="80" height="60" />
         <br /> <b>MINERAL WATER (SMALL)</b>
         <br /><i>Aquafina 500ml mineral water bottle</i>
         <br /><b>Rs.80</b></li>
-    <li><img src="../images/can.webp" width="80" height="80" />
+    <li><img src="../images/can-removebg-preview.png" width="80" height="80" />
         <br /> <b>CAN DRINK</b>
         <br /><i>250ml can</i>
         <br /><b>Rs.130</b></li>
-    <li><img src="../images/ltrdrink.webp" height="80" width="80" />
+    <li><img src="../images/ltrdrink-removebg-preview.png" height="80" width="80" />
         <br /> <b>1.5 LTR DRINK</b>
         <br /><i>1500ml Bottle</i>
         <br /><b>Rs.200</b></li>
-    <li><img src="../images/milktea.webp" width="80" height="80" />
+    <li><img src="../images/milktea-removebg-preview.png" width="80" height="80" />
         <br /> <b>MILK TEA</b>
         <br /><i>Milk tea,together with sugar</i>
         <br /><b>Rs.80</b></li>
-    <li><img src="../images/Greentea.webp" width="80" height="80" />
+    <li><img src="../images/Greentea-removebg-preview.png" width="80" height="80" />
         <br /> <b>GREEN TEA</b>
         <br /><i>Green tea without sugar</i>
         <br /><b>Rs.90</b></li>
-    <li><img src="../images/coffee.webp" height="80" width="80" />
+    <li><img src="../images/coffee-removebg-preview.png" height="80" width="80" />
         <br /> <b>COFFEE</b>
         <br /><i>Milk coffee, together with sugar</i>
         <br /><b>Rs.120</b></li>
