--- a/RESTURANT/HANDI/handi.html
+++ b/RESTURANT/HANDI/handi.html
@@ -24,22 +24,22 @@
         fortunate enough to savor its delectable taste.</p>
 
     <ul>
-        <li><img src="../images/chickenhandi.jpeg" height="120" width="120" />
+        <li><img src="../images/chickenhandi-removebg-preview.png" height="120" width="120" />
             <br /><b>CHICKEN HANDI</b>
             <br />Serves 2 OR 3 --- <i>A mild buttery curry cooked in clay Pot 
             <BR /> full of creamy flavored chicken cubes.</i>
             <br /><b>Rs.1199</b></li>
-        <li><img src="../images/chickenreshmihandi.webp" height="120" width="120" />
+        <li><img src="../images/chickenreshmihandi-removebg-preview.png" height="120" width="120" />
             <br /><b>CHICKEN RESHMI HANDI</b>
             <br />Serves 2 OR 3 --- <i>A full on creamy curry cooked in clay pot 
             <BR />full of julienne cut chicken and cream and topped with cheese.</i>
             <br /><b>Rs.1995</b></li>
-        <li><img src="../images/chickenmakhnihandi.jpg" height="120" width="120" />
+        <li><img src="../images/chickenmakhnihandi-removebg-preview.png" height="120" width="120" />
             <br /><b>CHICKEN MAKHNI HANDI</b>
             <br />Serves 2 OR 3 --- <i>A creamy curry cooked in clay pot 
             <BR />full of buttery flavored chicken cubes with a tarka of butter.</i>
             <br /><b>Rs.1399</b></li>  
-        <li><img src="../images/chickenbbqhandi.jpg" height="120" width="120" />
+        <li><img src="../images/chickenbbqhandi-removebg-preview.png" height="120" width="120" />
             <br /><b>CHICKEN BBQ HANDI</b>
             <br />Serves 2 OR 3 --- <i>A mild buttery curry cooked in clay pot 
             <BR />full of tandoori flavored chicken cubes.</i>
