ADDED NEW DEALS

--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -35,7 +35,13 @@
                 <li>DEAL ONE (9%OFF)</li>
                 <li>DEAL TWO (10%OFF)</li>
                 <li>DEAL THREE (18%OFF)</li>
-                <li>DEAL FOUR (20%OFF)</li>
+                <li>DEAL FOUR (25%OFF)</li>
+                <li>DEAL FIVE (09%OFF)</li>
+                <li>DEAL SIX (14%OFF)</li>
+                <li>DEAL SEVEN (10%OFF)</li>
+                <li>DEAL EIGHT (10%OFF)</li>
+                <li>DEAL NINE (10%OFF)</li>
+                <li>DEAL TEN (09%OFF)</li>
             </ol>
         </li>
 
