ADDED DEAL FIVE IMAGE

--- a/RESTURANT/ONLINE DEALS/onlinedeals.html
+++ b/RESTURANT/ONLINE DEALS/onlinedeals.html
@@ -36,7 +36,7 @@
         <br />& CHICKEN KARAHI</i> <br />            
         <s>Rs.4500</s> <strong>Rs.3600</strong>
         <br /><em>(valid till 31 Dec 2023)</em></li></ul>
-    <li><img src="../images/dealfive.webp" height="120" width="120" />
+    <li><img src="../images/DEALFIVE.webp" height="120" width="120" />
         <br /><strong>DEAL FIVE (09%OFF)</strong><ul><li><b>ZINGER BURGER & CRISPY MAYO ROLL</b>
         <br />Serves 2 OR 3 --- <i>ZINGER BURGER 
         <br /> CRISPY MAYO ROLL & DRINK </i> <br />
