--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -11,7 +11,7 @@
 <body>
     <center>
         <a href="index.html"><img src="images/CHIEF.gif" alt="Resturant" width="250" height="250" /></a>
-            <a href="index.html"><br /><h1>AQIB RESTAURANT</h1></a>
+            <a href="index.html"><br /><h1 class="head">AQIB<br />RESTAURANT</h1></a>
     </center><br />
     <a href="ONLINE DEALS/onlinedeals.html"><img src="images/dealbanner.webp" width="1330" height="500" /> </a>
     <hr />
