added images bg of new deals

--- a/RESTURANT/ONLINE DEALS/onlinedeals.html
+++ b/RESTURANT/ONLINE DEALS/onlinedeals.html
@@ -36,32 +36,32 @@
         <br />& CHICKEN KARAHI</i> <br />            
         <s>Rs.4500</s> <strong>Rs.3600</strong>
         <br /><em>(valid till 31 Dec 2023)</em></li></ul>
-    <li><img src="../images/DEALFIVE.webp" height="120" width="120" />
+    <li><img src="../images/DEALFIVE-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL FIVE (09%OFF)</strong><ul><li><b>ZINGER BURGER & CRISPY MAYO ROLL</b>
         <br />Serves 2 OR 3 --- <i>ZINGER BURGER 
         <br /> CRISPY MAYO ROLL & DRINK </i> <br />
         <s>Rs.955</s> <strong>Rs.870</strong></li></ul>
-    <li><img src="../images/DEALSIX.webp" height="120" width="120" />
+    <li><img src="../images/DEALSIX-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL SIX (14%OFF)</strong><ul><li><b>BBQ CHICKEN BURGER & MALAI CLUB SANDWICH</b>
         <br />Serves 2 OR 3 --- <i>BBQ CHICKEN BURGER 
         <br /> MALAI CLUB SANDWICH</i> <br />
         <s>Rs.1280</s> <strong>Rs.1100</strong></li></ul>
-    <li><img src="../images/dealseven.webp" height="120" width="120" />
+    <li><img src="../images/dealseven-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL SEVEN (10%OFF)</strong><ul><li><b>CHICKEN TIKKA (LEG)</b>
         <br />Serves 1 --- <i>CHICKEN TIKKA (LEG)
         <br />PARATHA & SOFT DRINK</i> <br />
         <s>Rs.690</s> <strong>Rs.620</strong></li></ul>
-    <li><img src="../images/DEALEIGHT.webp" height="120" width="120" />
+    <li><img src="../images/DEALEIGHT-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL EIGHT (10%OFF)</strong><ul><li><b>2 CHICKEN TIKKA (LEG), SEEKH KABAB, RESHMI KABAB</b>
         <br />Serves 4 OR 5 --- <i>2 CHICKEN TIKKA (LEG) , SEEKH KABAB , RESHMI KABAB
         <br />3 PARATHA & 1.5 LTR DRINK</i> <br />
         <s>Rs.2850</s> <strong>Rs.2500</strong></li></ul>
-    <li><img src="../images/DEALNINE.webp" height="120" width="120" />
+    <li><img src="../images/DEALNINE-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL EIGHT (10%OFF)</strong><ul><li><b>CHICKEN SHASHLIK, CHICKEN CHOWMEIN, ZINGER BURGER</b>
         <br />Serves 3 OR 4 --- <i>CHICKEN SHASHLIK, CHICKEN CHOWMEIN, ZINGER BURGER,
         <br />FRIED RICE & 1.5 LTR DRINK</i> <br />
         <s>Rs.2390</s> <strong>Rs.2160</strong></li></ul>
-    <li><img src="../images/DEALTEN.webp" height="120" width="120" />
+    <li><img src="../images/DEALTEN-removebg-preview.png" height="120" width="120" />
         <br /><strong>DEAL EIGHT (09%OFF)</strong><ul><li><b>2 CHICKEN TIKKA (LEG), RESHMI KABAB, CHICKEN KARAHI</b>
         <br />Serves 4 OR 5 --- <i>2 CHICKEN TIKKA (LEG), RESHMI KABAB, CHICKEN KARAHI
         <br />4 NAAN, 2 PARATHA & 1.5 LTR DRINK</i> <br />
