--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -10,8 +10,10 @@
    </head>
 <body>
     <center>
-        <a href="index.html"><img src="images/CHIEF.gif" alt="Resturant" width="250" height="250" /></a>
-            <a href="index.html"><br /><h1 class="head">AQIB<br />RESTAURANT</h1></a>
+        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_6o6RixO11s.json" mode="bounce" 
+        background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+       <a href="index.html"><h1 class="head">AQIB<br />RESTAURANT</h1></a>
     </center><br />
     <a href="ONLINE DEALS/onlinedeals.html"><img src="images/dealbanner.webp" width="1330" height="500" /> </a>
     <hr />
