--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -11,8 +11,8 @@
 <body>
     <center>
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-        <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_6o6RixO11s.json" mode="bounce" 
-        background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
+        <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_6o6RixO11s.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;" 
+         loop  autoplay></lottie-player>
        <a href="index.html"><h1 class="head">AQIB<br />RESTAURANT</h1></a>
     </center><br />
     <a href="ONLINE DEALS/onlinedeals.html"><img src="images/dealbanner.webp" width="1330" height="500" /> </a>
@@ -27,8 +27,8 @@
         diversified menu.Relish the great moments and exceptional variety of food with us. Foods Inn also allows you to
         celebrate your
         birthdays and special occasions with unmatched services.</p>
-    <ul>
-        <li><a href="ONLINE DEALS/onlinedeals.html">
+    <ul class="in">
+       <li><a href="ONLINE DEALS/onlinedeals.html">
                 <img src="images/dealiconn-removebg-preview.png" width="100" height="90" /> </a>
             <br /><a href="ONLINE DEALS/onlinedeals.html">
                 <h3>DEALS</h3>
@@ -47,7 +47,7 @@
             </ol>
         </li>
 
-        <li><a href="STARTER/starter.html"><img src="images/starter-removebg-preview (1).png" alt="STARTER" width="100" height="70" /> </a>
+        <li><a href="STARTER/starter.html"><img src="images/starter-removebg-preview (1).png" alt="STARTER" width="100" height="90" /> </a>
             <BR /><a href="STARTER/starter.html">
                 <h3>STARTER</h3>
             </a>
@@ -59,7 +59,7 @@
             </ul>
         </li>
 
-        <LI><a href="BURGERS/burgers.html"> <img src="images/bur-removebg-preview (1).png" alt="BURGERS" width="90" height="90" />
+        <li><a href="BURGERS/burgers.html"> <img src="images/bur-removebg-preview (1).png" alt="BURGERS" width="100" height="90" />
             </a>
             <br /><a href="BURGERS/burgers.html">
                 <h3>BURGERS</h3>
@@ -70,9 +70,9 @@
                 <li>BBQ CHICKEN BURGER</li>
                 <li>AMERICAN GRILLED BURGER</li>
             </ul>
-        </LI>
+        </li>
 
-        <LI><a href="KARAHI/karahi.html"> <img src="images/karahiicon.png" alt="KARAHI" width="90" height="100" /> </a>
+        <li><a href="KARAHI/karahi.html"> <img src="images/karahiicon.png" alt="KARAHI" width="100" height="90" /> </a>
             <BR /><a href="KARAHI/karahi.html">
                 <h3>KARAHI</h3>
             </a>
@@ -82,9 +82,9 @@
                 <li>MUTTON PESHAWARI KARAHI</li>
                 <li>MUTTON BUTTER KARAHI</li>
             </ul>
-        </LI>
+        </li>
 
-        <LI><a href="HANDI/handi.html"> <img src="images/handiiconn-removebg-preview.png" alt="HANDI" width="75" height="90" /> </a>
+        <li><a href="HANDI/handi.html"> <img src="images/handiiconn-removebg-preview.png" alt="HANDI" width="100" height="90" /> </a>
             <br /><a href="HANDI/handi.html">
                 <h3>HANDI</h3>
             </a>
@@ -94,10 +94,10 @@
                 <li>CHICKEN MAKHNI HANDI</li>
                 <li>CHICKEN BBQ HANDI</li>
             </ul>
-        </LI>
+        </li>
 
-        <LI><a href="Baverages/Baverages.html"> <img src="images/baverage_icon-removebg-preview.png" alt="Baverages" width="80"
-                    height="80" /> </a>
+        <li><a href="Baverages/Baverages.html"> <img src="images/baverage_icon-removebg-preview.png" alt="Baverages" width="100"
+                    height="90" /> </a>
             <BR /><a href="Baverages/Baverages.html">
                 <h3>BEVERAGES</h3>
             </a>
@@ -110,15 +110,13 @@
                 <li>GREEN TEA</li>
                 <li>COFFEE</li>
             </ul>
-        </LI>
+        </li>
     </ul>
     <hr />
     <center>
         <h2>CONTACT US:</h2>
-        <a href="https://www.facebook.com/aqib984" target="_blank"><img src="images/facebookicon.png" width="30"
-            height="30" /> </a>
-        <a href="https://www.instagram.com/aqi984/" target="_blank"><img src="images/instaicon.png" width="30"
-                height="30" /> </a>
+        <a href="https://www.facebook.com/aqib984" target="_blank"><svg class="facebook" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg></a>
+        <a href="https://www.instagram.com/aqi984/" target="_blank"><svg class="insta" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg></a>
         <br /><a href=""><img src="images/gotopicon2.png" alt="Top" width="50" height="50" class="top" /> </a>
     </center>
 </body>
