--- a/RESTURANT/index.html
+++ b/RESTURANT/index.html
@@ -24,7 +24,7 @@
         ora slow-mover exquisite dinner.
         From fast food to Chinese, BBQ to seafood, enjoy every bit of our traditional cuisines and experience greatness
         with our
-        diversified menu.Relish the great moments and exceptional variety of food with us. Foods Inn also allows you to
+        diversified menu.Relish the great moments and exceptional variety of food with us. AQIB RESTAURANT also allows you to
         celebrate your
         birthdays and special occasions with unmatched services.</p>
     <ul class="inline">
