--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>MY ASSIGNMENTS</h1>
     </center>
     <hr />
-    <table cellpadding="80">
+    <table cellpadding="70">
         <tr>
             <td>
                 <a href="RESTURANT/index.html">
@@ -23,10 +23,18 @@
             <td>
                 <a href="CHESS/index.html">
                     <h1>2: CHESS GAME</h1>
-                </a></td>
+                </a>
+            </td>
             <td>
                 <a href="Form/index.html">
                     <h1>3: EMPLOYMENT FORM</h1>
+                </a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="POEM/index.html">
+                    <h1>4: POEM</h1>
                 </a>
             </td>
         </tr>
