--- a/POEM/index.html
+++ b/POEM/index.html
@@ -10,7 +10,7 @@
 
 <body class="back">
     <h1>If----</h1>
-    <p class="author">--- by Rudyard Kipling ---</p>
+    <div class="author"><cite class="author">--- by Rudyard Kipling ---</cite></div>
     <center>
         <p class="paragraph1">if you can keep your head when all about you<br />
             Are losing theirs and blaming it on you,<br />
