--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>MY ASSIGNMENTS</h1>
     </center>
     <hr />
-    <table cellpadding="70">
+    <table class="inline">
         <tr>
             <td>
                 <a href="RESTURANT/index.html">
@@ -30,15 +30,20 @@
                     <h1>3: EMPLOYMENT FORM</h1>
                 </a>
             </td>
-        </tr>
-        <tr>
             <td>
                 <a href="POEM/index.html">
                     <h1>4: POEM</h1>
                 </a>
             </td>
         </tr>
-    </table>
+        <tr>
+            <td>
+                <a href="SALT N PEPPER/index.html">
+                    <h1>5: SALT,N PEPPER</h1>
+                </a>
+            </td>
+        </tr>
+        </ol>
 </body>
 
 </html>
