Salt'n Pepper Complete look

--- a/SALT N PEPPER/index.html
+++ b/SALT N PEPPER/index.html
@@ -52,35 +52,239 @@
         </svg>
     </div>
     <div class="center">
-        <img src="images/banner.webp" alt="" width="100%">
+        <img id="bannerpic" src="images/banner.webp" alt="" width="100%">
+        <button id="bannerbutton">Order Online</button>
+        <svg id="bannericon" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+            <style>
+                svg {
+                    fill: #ffffff
+                }
+            </style>
+            <path
+                d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM281 385c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l71-71L136 280c-13.3 0-24-10.7-24-24s10.7-24 24-24l182.1 0-71-71c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L393 239c9.4 9.4 9.4 24.6 0 33.9L281 385z" />
+        </svg>
         <h1>Choose by Category</h1>
-        <span>
-            <ul class="pictures">
-                <li><img class="img1" src="images/sandwich.webp" alt=""><br />
-                    <h4>Sandwiches</h4>
-                </li>
-                <li><img class="img2" src="images/famousburger.webp" alt=""><br />
-                    <h4>Our Famous Burgers</h4>
-                </li>
-                <li><img class="img3" src="images/deckerburger.webp" alt=""><br />
-                    <h4>Deck Burgers</h4>
-                </li>
-                <li><img class="img4" src="images/steak.webp" alt=""><br />
-                    <h4>Steak</h4>
-                </li>
-                <li><img class="img5" src="images/chinese.webp" alt=""><br />
-                    <h4>Chinese</h4>
-                </li>
-            </ul>
-        </span>
-        <div class="info">
-            <img src="images/info.webp" alt="" width="50%">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum officia maxime aperiam, necessitatibus
-                mollitia dolor suscipit at, expedita nostrum ut, ipsum corporis animi praesentium adipisci ipsa eum
-                omnis laudantium consequuntur?</p>
+        <ul class="pictures">
+            <li><img class="img1" src="images/sandwich.webp" alt=""><br />
+                <h4>Sandwiches</h4>
+            </li>
+            <li><img class="img2" src="images/famousburger.webp" alt=""><br />
+                <h4>Our Famous Burgers</h4>
+            </li>
+            <li><img class="img3" src="images/deckerburger.webp" alt=""><br />
+                <h4>Deck Burgers</h4>
+            </li>
+            <li><img class="img4" src="images/steak.webp" alt=""><br />
+                <h4>Steak</h4>
+            </li>
+            <li><img class="img5" src="images/chinese.webp" alt=""><br />
+                <h4>Chinese</h4>
+            </li>
+        </ul>
+    </div>
+    <div class="info">
+        <div class="infopic">
+            <img src="images/info.webp" alt="" height="500" width="700">
+        </div>
+        <div class="infopara">
+            <h3 class="redheading">SALT'N PEPPER RESTAURANT</h3>
+            <h1 class="heading">Discover The Taste!</h1>
+            <p class="paragraph">The Salt’n Pepper is Pakistan’s most recognized and distinguished hospitality brand
+                with a history of
+                market innovation and excellence in restaurants chain operation. The Salt’n Pepper Restaurants are
+                regarded and respected as the number one restaurant entity in Pakistan by local and foreign
+                observers.</p>
+            <button class="learn">Learn More</button>
+            <svg class="learnicon" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <style>
+                    svg {
+                        fill: #ffffff
+                    }
+                </style>
+                <path
+                    d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM281 385c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l71-71L136 280c-13.3 0-24-10.7-24-24s10.7-24 24-24l182.1 0-71-71c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L393 239c9.4 9.4 9.4 24.6 0 33.9L281 385z" />
+            </svg>
         </div>
     </div>
+    <h5>Our Deals</h5>
+    <div>
+        <ul class="ourdeals">
+            <li><img class="deal1pic" src="images/deal1.webp" alt="" width="350" height="250">
+                <p class="dealheading">Superiors</p>
+                <p class="dealparagraph">Chicken (2 Pcs), Chicken
+                    Sandwich Cold (2 Pcs), French Fries, Cole Slaw,
+                    Dessert.</p>
+                <p class="dealprice">PKR 1,390</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+            <li><img class="deal2pic" src="images/deal2.webp" alt="" width="350" height="250">
+                <p class="dealheading">Pakistani</p>
+                <p class="dealparagraph">B.B.Q Chicken Tikka (1 Piece),
+                    Chicken
+                    Seekh Kabab (3 Pcs),</p>
+                <p class="dealprice">PKR 1,630</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+            <li><img class="deal3pic" src="images/deal3.webp" alt="" width="350" height="250"><br />
+                <p class="dealheading">Pakistani Deluxe
+                <p>
+                <p class="dealparagraph">Boneless Chicken Handi
+                    (Portion), Chicken Seekh Kabab</p>
+                <p class="dealprice">PKR 1,490</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+        </ul>
+    </div>
+    <div class="dealul">
+        <ul class="ourdeals">
+            <li><img class="deal1pic" src="images/deal4.webp" alt="" width="350" height="250">
+                <p class="dealheading">VIP</p>
+                <p class="dealparagraph">Chicken Shashlik (1/2 Portion), Chicken Sandwich Cold</p>
+                <p class="dealprice">PKR 1,890</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+            <li><img class="deal2pic" src="images/deal5.webp" alt="" width="350" height="250">
+                <p class="dealheading">DELUXE</p>
+                <p class="dealparagraph">Fried Chicken Breast Sandwich, Chicken Nuggets (4 Pcs),</p>
+                <p class="dealprice">PKR 1,790</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+            <li><img class="deal3pic" src="images/deal3.webp" alt="" width="350" height="250"><br />
+                <p class="dealheading">Pakistani VIP
+                <p>
+                <p class="dealparagraph">Boneless Chicken Handi (Portion), Boneless Chicken Boti</p>
+                <p class="dealprice">PKR 1,890</p>
+                <button class="dealbutton">Order Now</button>
+            </li>
+        </ul>
+    </div>
+    <div class="weekmenu">
 
+        <div class="weekmenupara">
+            <h3 class="weekredheading">Menu Of The Week</h3>
+            <h1 class="weekheading">Something Special <br /> For You To Try This Week!</h1>
+            <p class="weekparagraph">Boneless Chicken Handi (Portion), Boneless Chicken Boti (4 Pcs), Chicken Seekh
+                Kabab (3
+                Pcs), Vegetable Biryani, Mint Raita, Kachumar Salad, Nan, Dessert.</p>
+            <p class="pakistanivip">Pakistani VIP</p>
+            <p class="pricetax">Price Rs. 1,890 Plus Tax</p>
+            <button class="weekordernow">Order Now</button>
+            <svg class="weekicon" xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <style>
+                    svg {
+                        fill: #ffffff
+                    }
+                </style>
+                <path
+                    d="M0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM281 385c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l71-71L136 280c-13.3 0-24-10.7-24-24s10.7-24 24-24l182.1 0-71-71c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0L393 239c9.4 9.4 9.4 24.6 0 33.9L281 385z" />
+            </svg>
+        </div>
+        <div class="deatilpic">
+            <img src="images/detail.webp" alt="" height="600" width="650">
+        </div>
+    </div>
+    <div class="socialfeed">
+        <h5>Social Feed</h5>
+        <span class="socialfeed">
+            <img class="feedpic1" src="images/socialfeed1.webp" alt="" height="230" width="245">
+            <img class="feedpic2" src="images/socialfeed2.webp" alt="" height="230" width="245">
+            <img class="feedpic3" src="images/socialfeed3.webp" alt="" height="230" width="245">
+            <img class="feedpic4" src="images/socialfeed4.webp" alt="" height="230" width="245">
+            <img class="feedpic5" src="images/socialfeed5.webp" alt="" height="230" width="245">
+        </span>
+    </div>
+    <div id="back" class="footer">
+        <div>
+            <ul class="footerul">
+                <li><img class="footerpic" src="images/restaurant logo.webp" alt="" height="80" width="170">
+                    <p class="footerparagraph">The Salt’n Pepper Restaurants are an example of gracious dinning,
+                        outstanding
+                        service, extraordinary classic
+                        and contemporary cuisine. The restaurants have become the ultimate dinning destinations in
+                        Lahore. From
+                        family occasions to business dinner and moments of the heart, this place is where unforgettable
+                        memories are
+                        made.</p>
+                    <p class="term">Term & Conditions &nbsp Privacy policy</p>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul1">
+                <li>
+                    <h4 class="linkheading">Site Links</h4>
+                </li>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Deals</li>
+                <li>Photos</li>
+                <li>Publications</li>
+                <li>GetaFranchise</li>
+                <li>Feedback</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul2">
+                <li>
+                    <h4 class="contactheading">Contact Us</h4>
+                </li>
+                <li>+92 42 358 509 31</li>
+                <li>+92 42 358 509 30</li>
+                <li>+92 42 111 100 678</li>
+                <li>+92 03 111 444 610</li>
+                <li>snpfood@brain.net.pk</li>
+                <li class="address">23-Usman Block, New GardenTown, Lahore, Pakistan</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul3">
+                <li>
+                    <h4 class="followheading">Follow Us</h4>
+                </li>
+                <li class="inlineicon"><button class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="20"
+                            viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                            <style>
+                                svg {
+                                    fill: #ffffff
+                                }
+                            </style>
+                            <path
+                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z" />
+                        </svg></button></li>
+                <li class="inlineicon"><button class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="20"
+                            viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                            <style>
+                                svg {
+                                    fill: #ffffff
+                                }
+                            </style>
+                            <path
+                                d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+                        </svg></button></li>
+                <li class="inlineicon"><button class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="20"
+                            viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                            <style>
+                                svg {
+                                    fill: #ffffff
+                                }
+                            </style>
+                            <path
+                                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z" />
+                        </svg></button></li>
+                <li><img src="images/appstore.webp" alt=""></li>
+                <li><img src="images/playstore.webp" alt=""></li>
+            </ul>
+        </div>
+    </div>
+    <hr />
+    <div id="back" class="websiteend">
+        <p class="copyright">&copy; 2023</p>
+        <p class="endname">Salt'n Pepper Restaurant.</p>
+        <p class="end">Powered Bytossdown.com</p>
+    </div>
 </body>
 
 </html>
