Salt,n pepper restaurant complete

--- a/SALT N PEPPER RESTAURANT/index.html
+++ b/SALT N PEPPER RESTAURANT/index.html
@@ -12,11 +12,11 @@
     <div class="header">
         <img src="images/restaurant logo.webp" alt="restaurant logo" width="170" height="80">
         <ol class="inline">
-            <li class="li1">Home</li>
-            <li class="li2">About Us</li>
-            <li class="li3">Publications</li>
-            <li class="li4">Feedback</li>
-            <li class="li5">Get a Franchise</li>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Publications</li>
+            <li>Feedback</li>
+            <li>Get a Franchise</li>
         </ol>
         <svg class="user" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -66,19 +66,19 @@
         </svg>
         <h1>Choose by Category</h1>
         <ul class="pictures">
-            <li><img class="img1" src="images/sandwich.webp" alt=""><br />
+            <li><img src="images/sandwich.webp" alt=""><br />
                 <h4>Sandwiches</h4>
             </li>
-            <li><img class="img2" src="images/famousburger.webp" alt=""><br />
+            <li><img src="images/famousburger.webp" alt=""><br />
                 <h4>Our Famous Burgers</h4>
             </li>
-            <li><img class="img3" src="images/deckerburger.webp" alt=""><br />
+            <li><img src="images/deckerburger.webp" alt=""><br />
                 <h4>Deck Burgers</h4>
             </li>
-            <li><img class="img4" src="images/steak.webp" alt=""><br />
+            <li><img src="images/steak.webp" alt=""><br />
                 <h4>Steak</h4>
             </li>
-            <li><img class="img5" src="images/chinese.webp" alt=""><br />
+            <li><img src="images/chinese.webp" alt=""><br />
                 <h4>Chinese</h4>
             </li>
         </ul>
