add salt and pepper on my assignment page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </tr>
         <tr>
             <td>
-                <a href="SALT N PEPPER/index.html">
-                    <h1>5: SALT,N PEPPER</h1>
+                <a href="SAL'T N PEPPER RESTAURANT/index.html">
+                    <h1>5: SALT,N PEPPER RESTAURANT</h1>
                 </a>
             </td>
         </tr>
