--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </tr>
         <tr>
             <td>
-                <a href="SAL'T N PEPPER RESTAURANT/index.html">
+                <a href="SALT,N AND PEPPER HOMEPAGE/SAL'T N PEPPER RESTAURANT/index.html">
                     <h1>5: SALT,N PEPPER RESTAURANT</h1>
                 </a>
             </td>
